--- a/config.json.example
+++ b/config.json.example
@@ -3,7 +3,7 @@
         "user": "",
         "password": ""
     },
-    "headless": false,
+    "headless": true,
     "devtools": false,
     "args": ["--no-sandbox", "--disable-setuid-sandbox"]
 }
